[tool.poetry]
name = "pythonproject19"
version = "0.1.0"
description = ""
authors = ["George Astakhov <goha1115@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
